# mathmllib

./: CONTRIBUTORS  Makefile  Makefile.am  README.md  config.h  config.h.in  config.status  configure.ac  gtkmathview-custom-reader.pc  gtkmathview-gmetadom.pc  gtkmathview-libxml2-reader.pc  gtkmathview-libxml2.pc  gtkmathview.spec  libtool  mathview-backend-gtk.pc  mathview-backend-ps.pc  mathview-backend-svg.pc  mathview-backend-svg.pc.in  mathview-core.pc  mathview-core.pc.in  mathview-frontend-custom-reader.pc  mathview-frontend-custom-reader.pc.in  mathview-frontend-gmetadom.pc  mathview-frontend-libxml2-reader.pc  mathview-frontend-libxml2-reader.pc.in  mathview-frontend-libxml2.pc  mathview-frontend-libxml2.pc.in
auto/: Char.hh  Makefile  Makefile.am  config.dirs
autopackage/: Makefile  abimath.apspec
config/: Makefile  Makefile.am  gtkmathview.conf.xml
doc/: Makefile  Makefile.am  mathmlsvg.1
mathmlps/: Makefile  main.cc
mathmlsvg/: Makefile  Makefile.am  SMS.cc  SMS.hh  SVG_EvalRenderingContext.hh  main.cc  main.cc~
scripts/: Makefile
src/: Makefile  Makefile.am
src/backend/: Makefile  Makefile.am
src/backend/common/: Area.cc  Area.hh  AreaId.hh  Backend.cc  Backend.hh  BinContainerArea.cc  BinContainerArea.hh  BoxedLayoutArea.hh  CombinedGlyphArea.cc  CombinedGlyphArea.hh  ComputerModernShaper.cc  ComputerModernShaper.cc~  ComputerModernShaper.hh~  FormattingContext.cc  FormattingContext.hh  GlyphArea.hh  GlyphStringArea.hh  GlyphWrapperArea.hh  HorizontalArrayArea.hh  Makefile  Makefile.am  MathGraphicDevice.cc  OverlapArrayArea.cc  OverlapArrayArea.hh  Shaper.cc  Shaper.hh  ShiftArea.hh  SimpleArea.cc  SimpleArea.hh  StandardSymbolsShaper.hh  TFMFontManager.hh  VerticalArrayArea.cc  VerticalArrayArea.cc~  VerticalArrayArea.hh  t1lib_T1FontManager.hh
src/backend/common/tfm/: Makefile  Makefile.am  TFMManager.hh  TFMManager.hh~
src/backend/gtk/: Gtk_PangoFontManager.hh  Gtk_PangoFontManager.hh~  Makefile
src/backend/ps/: Makefile  libmathview_backend_ps_la-PS_StreamRenderingContext.loT
src/backend/svg/: Makefile  Makefile.am  SVG_Backend.cc  SVG_StreamRenderingContext.cc
src/common/: Configuration.hh  HashMap.hh  Makefile  Makefile.am  ScopedHashMap.hh  String.cc  String.hh  Utils.cc  token.cc
src/common/mathvariants/: Makefile  Makefile.am
src/common/mathvariants/xml/: Makefile
src/engine/: Makefile  Makefile.am
src/engine/adapters/: Makefile
src/engine/boxml/: Makefile
src/engine/common/: Attribute.hh  Element.hh  Makefile  Makefile.am  View.cc  View.hh
src/engine/mathml/: Makefile  Makefile.am  MathMLOperatorDictionary.hh  MathMLOperatorDictionary.hh~  MathMLOperatorElement.cc  MathMLOperatorElement.hh  MathMLRowElement.cc  MathMLTableFormatter.cc  MathMLTableFormatter.hh
src/frontend/: Makefile  Makefile.am
src/frontend/common/: Builder.cc  Builder.hh  Makefile  Makefile.am  TemplateBuilder.hh  TemplateBuilder.hh~  TemplateLinker.hh  TemplateLinker.hh~  TemplateReaderRefinementContext.hh  TemplateRefinementContext.hh  TemplateSetup.hh
src/frontend/custom_reader/: Makefile  Makefile.am  libfrontend_custom_reader_la-custom_reader_Builder.loT
src/frontend/gmetadom/: Makefile
src/frontend/libxml2/: Makefile  Makefile.am
src/frontend/libxml2_reader/: Makefile  Makefile.am
src/view/: Init.hh  Init.hh~  Makefile  Makefile.am
src/widget/: Makefile
viewer/: Makefile
